add multihashlookup
